refactoring and added support for parallel Tests in same Test class for TestNG